<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    android:layout_centerInParent="true">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="15dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_centerInParent="true"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/light_grey"
            android:paddingRight="15dp"
            android:paddingLeft="15dp">

            <TextView
                android:id="@+id/txtInsertSum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/amarante"
                android:text="@string/insert_sum"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ed_inputSum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtInsertSum"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:fontFamily="@font/amarante"
                android:hint="@string/input_sum"
                android:inputType="numberDecimal"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/btnSubmitDeposit"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ed_inputSum"
                android:layout_centerHorizontal="true"
                android:text="@string/submit"
                android:textColor="#434343" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>