<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPageActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewBalance"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:elevation="15dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_grey"
            android:paddingLeft="30dp"
            android:paddingTop="15dp"
            android:paddingRight="30dp"
            android:paddingBottom="15dp">

            <TextView
                android:id="@+id/txtWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/amarante"
                android:text="@string/hello_to_bank"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtWelcome"
                android:fontFamily="@font/amarante"
                android:text="Balance:"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/actualBalance"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtBalance"
                android:fontFamily="@font/amarante"
                android:text="$999"
                android:textSize="25sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:elevation="15dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewBalance">

        <RelativeLayout
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:background="@color/light_grey"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <ImageView
                android:id="@+id/userImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="25dp"
                android:src="@mipmap/dolar_sign_intro" />

            <TextView
                android:id="@+id/txtOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@+id/userImage"
                android:fontFamily="@font/amarante"
                android:text="@string/your_options"
                android:textSize="23sp" />

            <Button
                android:id="@+id/btnDeposit"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userImage"
                android:fontFamily="@font/amarante"
                android:text="@string/deposit"
                android:textAllCaps="false"
                android:textColor="#434343"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btnWithdraw"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userImage"
                android:layout_marginStart="25dp"
                android:layout_toEndOf="@id/btnDeposit"
                android:fontFamily="@font/amarante"
                android:text="@string/withdraw"
                android:textAllCaps="false"
                android:textColor="#434343"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btnTransfer"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnDeposit"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/amarante"
                android:text="@string/transfer"
                android:textAllCaps="false"
                android:textColor="#434343"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btnLogout"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnWithdraw"
                android:layout_marginStart="25dp"
                android:layout_toEndOf="@id/btnTransfer"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/amarante"
                android:text="@string/log_out"
                android:textAllCaps="false"
                android:textColor="#434343"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="15dp"
        app:cardCornerRadius="12dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewOptions">

        <RelativeLayout
            android:layout_width="350dp"
            android:layout_height="270dp"
            android:background="@color/light_grey"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_quick_contact"
                android:fontFamily="@font/amarante"
                android:textSize="16sp"
                android:id="@+id/txtAddQuickContact"
                android:textStyle="bold"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add"
                app:backgroundTint="#8C8C8C"
                app:fabSize="mini"
                android:id="@+id/btnAddContact"
                android:layout_marginStart="230dp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/contactsRecv"
                android:layout_below="@id/txtAddQuickContact"
                android:layout_marginTop="5dp"
                android:scrollbars="vertical"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>